# git-b

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPMENT.md  README.md  build  build.rs
Formula/: git_b.rb
cli/: Cargo.toml
cli/src/: lib.rs
crates/algo/: Cargo.toml
crates/algo/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/display/: Cargo.toml
crates/display/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
man/: git-b.1
src/: cli.rs  main.rs
