[package]
name = "git-b"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
skim = "0.9.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
