[workspace]
members = [".", "crates/cli", "crates/parse", "crates/algo", "crates/display"]
resolver = "2"

[workspace.package]
version = "1.6.0"
edition = "2021"

[package]
name = "git-b"
version.workspace = true
edition.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algo = { path = "crates/algo" }
cli = { path = "crates/cli" }
display = { path = "crates/display" }
parse = { path = "crates/parse" }
skim = "4.6.3"

[build-dependencies]
cli = { path = "crates/cli" }
clap = { version = "4.6.1" }
clap_mangen = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
